# brandyBox

./: .dockerignore  .env.example  .gitignore  LICENSE  NOTICE  README.md  SECURITY.md  mkdocs.yml  prompt.txt  skills-lock.json
.cursor/agents/: brandybox-github-issues.md
.cursor/commands/: install-brandybox-linux-client.md  install-brandybox-server.md  install-brandybox-windows-client.md  release-client-github.md
.cursor/plans/: brandy_box_implementation_7ff4bd0a.plan.md
.cursor/rules/: autonomous-testing-subagent.mdc  brandybox-rules.mdc  linux-client-install.mdc
.github/workflows/: build-client-release.yml  publish-backend-image.yml  test.yml
assets/installers/: README_installers.md  brandybox.iss  linux_install.sh
backend/: .env.example  Dockerfile  check_server_disk_config.sh  conftest.py  docker-compose.ghcr.yml  docker-compose.yml  pytest.ini  requirements.txt  update_brandybox.sh  webhook_listener.py
backend/app/: __init__.py  config.py  limiter.py  main.py
backend/tests/: __init__.py  test_api.py  test_chunked_upload.py  test_files_routes.py  test_files_routes_http_security.py  test_jwt.py  test_storage.py  test_upload_streaming.py  test_users_service.py  test_web_features.py
client/: README.md  brandybox.spec  pyproject.toml
client-tauri/: README.md  index.html  package-lock.json  package.json
client-tauri/src/: App.tsx  Login.tsx  Settings.tsx  TitleBar.tsx  errors.ts
client-tauri/src-tauri/: Cargo.toml  tauri.conf.json
client-tauri/src-tauri/capabilities/: default.json
client-tauri/src-tauri/src/: api.rs  config.rs  credentials.rs  lib.rs  main.rs  network.rs  sync.rs
client/brandybox/: __init__.py  config.py  main.py  network.py  tray.py
client/brandybox/api/: __init__.py  client.py
client/brandybox/auth/: __init__.py  credentials.py
client/brandybox/sync/: __init__.py  engine.py  watcher.py
client/brandybox/ui/: __init__.py  dialogs.py  notify.py  settings.py
client/tests/: __init__.py  test_api_client.py  test_config.py  test_imports.py  test_sync_engine.py
docs/: index.md  license.md  pi_install.md  releasing.md  security-review.md
docs/client/: tauri.md  (+2 more)
scripts/: compare_sync_folder.py  generate_logos.py  install_desktop_tauri.sh  install_desktop_venv.sh  install_tauri_prereqs.sh  release.sh  run-qa.sh  run-settings-only.sh  run_brandybox_installed.sh
team/: c3po.md  han.md  handoff-c3po-to-yoda-industry-sync-desktop.md  handoff-c3po-web-spa.md  handoff-yoda-from-vader.md  leia.md  luke.md  r2d2.md  vader.md  yoda.md
web/: index.html  package-lock.json  package.json  vite.config.ts
(+53 files in other folders)
