[package]
name = "brandybox"
version = "0.2.2"
description = "Brandy Box desktop client - sync local folder to Raspberry Pi"
authors = ["Brandy Box"]
edition = "2021"

[lib]
name = "brandybox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
keyring = "2"
dirs = "5"
thiserror = "2"
log = "0.4"
urlencoding = "2"
walkdir = "2"
open = "5"
fs2 = "0.4"
sha2 = "0.10"
