[package]
name = "brandybox"
version = "1.1.0"
description = "Brandy Box desktop client - sync local folder to Raspberry Pi"
authors = ["Brandy Box"]
edition = "2021"

[lib]
name = "brandybox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri = { version = "2.11", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2.5"
tauri-plugin-notification = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1.43", features = ["full"] }
keyring = "3.6"
dirs = "6.0"
thiserror = "2.0"
log = "0.4"
urlencoding = "2.1"
walkdir = "2.5"
open = "5.3"
fs2 = "0.4"
sha2 = "0.10"
uuid = { version = "1.10", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
